--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     // Spring Data JPA + Hibernate 포함. DB 연동과 ORM 처리
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // 로그인/회원가입 등 보안 기능 제공
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
     // @Valid, @NotBlank 등 Bean Validation 처리
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
