--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_KEY }}
           source: "build/libs/user-management-backend-0.0.1-SNAPSHOT.jar"
-          target: "/home/ec2-user/app"
+          target: "/home/ec2-user/app/build/libs"
 
       - name: Run deploy.sh on EC2
         uses: appleboy/ssh-action@v0.1.8
