--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,15 @@ jobs:
           source: "build/libs/user-management-backend-0.0.1-SNAPSHOT.jar"
           target: "/home/ec2-user/app/build/libs"
 
+      - name: Upload deploy.sh
+        uses: appleboy/scp-action@v0.1.7
+        with:
+         host: ${{ secrets.EC2_HOST }}
+         username: ${{ secrets.EC2_USERNAME }}
+         key: ${{ secrets.EC2_KEY }}
+         source: "deploy.sh"
+         target: "/home/ec2-user/app"
+
       - name: Run deploy.sh on EC2
         uses: appleboy/ssh-action@v0.1.8
         with:
