--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,7 +14,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-    database-platform: org.hibernate.dialect.MySQLDialect  # ✅ 권장 dialect로 수정 (MySQL8Dialect은 deprecated)
+    database-platform: org.hibernate.dialect.MySQLDialect
 
   mail:
     host: smtp.gmail.com
@@ -33,6 +33,12 @@ coolsms:
     key: ${COOLSMS_API_KEY}
     secret: ${COOLSMS_API_SECRET}
     number: ${COOLSMS_API_NUMBER}
+
+springdoc:
+  swagger-ui:
+    disable-swagger-default-url: true
+    csrf:
+      enabled: false
 
 server:
   port: 8080
