fix(config): disable caching in production environment

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -39,6 +39,8 @@ springdoc:
     disable-swagger-default-url: true
     csrf:
       enabled: false
+  cache:
+    disabled: true
 
 server:
   port: 8080
